[gd_scene load_steps=3 format=3 uid="uid://cbxrj06nb88vf"]

[ext_resource type="Theme" uid="uid://jil4di7vynr5" path="res://assets/theme.tres" id="1_0waaq"]
[ext_resource type="Script" path="res://scenes/TESTS/recipe_panel.gd" id="2_8lpxt"]

[node name="RecipePanel" type="PanelContainer"]
theme = ExtResource("1_0waaq")
script = ExtResource("2_8lpxt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RecipeName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Recipe Name"

[node name="IngredientsList" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Ingredients"
fit_content = true

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BUILD"
